Fix footer whitespace at the end of the page (added html: height=100%)

--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@
 
 html {
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
